--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "babel-loader": "^8.2.2",
     "lerna": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
