--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "lerna": "^4.0.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.15.2",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rxjs": "^6.6.7",
+    "rxjs-hooks": "^0.7.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
